[gd_scene load_steps=4 format=3 uid="uid://j2y463k62qkb"]

[ext_resource type="Script" uid="uid://ctg8nwoeoiuyg" path="res://item.gd" id="1_tnite"]

[sub_resource type="Gradient" id="Gradient_0xm2m"]

[sub_resource type="GradientTexture1D" id="GradientTexture1D_h2yge"]
gradient = SubResource("Gradient_0xm2m")
width = 32

[node name="Item" type="HBoxContainer"]
size_flags_horizontal = 3
script = ExtResource("1_tnite")

[node name="IconTexture" type="TextureRect" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
texture = SubResource("GradientTexture1D_h2yge")

[node name="DistanceLabel" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
text = "300"

[node name="PathLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "S[b]onic[/b].png"
scroll_active = false
autowrap_mode = 0
vertical_alignment = 1
